--- a/Hackthon/Hackthon/Base.lproj/Main.storyboard
+++ b/Hackthon/Hackthon/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Lzu-Pq-fl6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CJV-bl-dmq">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -8,42 +8,83 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Items List View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Hackthon" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ItemsListViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ItemsListViewController" customModule="Hackthon" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="2ce-YU-r0o">
+                                <rect key="frame" x="0.0" y="149" width="393" height="669"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="WwH-n2-yWT"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="gKK-Z2-uOD"/>
+                                </connections>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VWK-EE-RoP" customClass="Segmentio" customModule="Segmentio">
+                                <rect key="frame" x="20" y="79" width="353" height="50"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="2kX-Ew-lEv"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="2ce-YU-r0o" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3tw-K6-JPH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2ce-YU-r0o" secondAttribute="trailing" id="AVb-FI-RFn"/>
+                            <constraint firstItem="VWK-EE-RoP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="G5b-HF-LO4"/>
+                            <constraint firstItem="2ce-YU-r0o" firstAttribute="top" secondItem="VWK-EE-RoP" secondAttribute="bottom" constant="20" id="Ie8-rf-QW4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VWK-EE-RoP" secondAttribute="trailing" constant="20" id="Kgb-nf-Bc1"/>
+                            <constraint firstItem="VWK-EE-RoP" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="YX9-4T-TGG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="2ce-YU-r0o" secondAttribute="bottom" id="hhl-Ef-e5Y"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="NNZ-W0-oNL"/>
+                    <connections>
+                        <outlet property="segmentView" destination="VWK-EE-RoP" id="T1z-QD-PWu"/>
+                        <outlet property="tableView" destination="2ce-YU-r0o" id="FQt-1Z-cix"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1063.3587786259541" y="3.5211267605633805"/>
+            <point key="canvasLocation" x="867.93893129770993" y="19.718309859154932"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="yeE-fG-BZF">
+        <!--Scanned Image View Controlller-->
+        <scene sceneID="1vJ-jp-uds">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Lzu-Pq-fl6" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="iKL-cF-QwF">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
+                <viewController storyboardIdentifier="ScannedImageViewControlller" useStoryboardIdentifierAsRestorationIdentifier="YES" id="CJV-bl-dmq" customClass="ScannedImageViewControlller" customModule="Hackthon" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Rld-V3-zXw">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dummyImage" translatesAutoresizingMaskIntoConstraints="NO" id="3AR-wh-aak">
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="les-8r-HDu"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="3AR-wh-aak" secondAttribute="bottom" id="E5M-cM-lNd"/>
+                            <constraint firstItem="3AR-wh-aak" firstAttribute="leading" secondItem="les-8r-HDu" secondAttribute="leading" id="abk-t0-ATL"/>
+                            <constraint firstItem="les-8r-HDu" firstAttribute="trailing" secondItem="3AR-wh-aak" secondAttribute="trailing" id="nNo-h1-zVe"/>
+                            <constraint firstItem="3AR-wh-aak" firstAttribute="top" secondItem="Rld-V3-zXw" secondAttribute="top" id="zID-Et-5S7"/>
+                        </constraints>
+                    </view>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Kxf-Iq-qZN"/>
+                        <outlet property="imagevIew" destination="3AR-wh-aak" id="E0w-oK-qlk"/>
                     </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="SX0-wH-1YG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J3V-h2-zvo" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.64122137404578" y="3.5211267605633805"/>
+            <point key="canvasLocation" x="208" y="20"/>
         </scene>
     </scenes>
     <resources>
+        <image name="dummyImage" width="245" height="206"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
